[package]
name = "rust_ini"
version = "0.9.4"
authors = ["xiaoaiwhc <honchang.wong@gmail.com>"]
description = "An Ini configuration file parsing library in Rust"
repository = "https://github.com/xiaoaiwhc/rust_ini"
keywords = ["ini", "configuration", "conf", "cfg"]
license = "MIT"

[lib]
name = "ini"
test = true

[dependencies]
log = "^0.3.5"
